# pypinch

./: Cargo.toml  LICENSE  README.md  benchmark.txt  benchmark_displayer.py  consts.py  deserialize.py  exceptions.py  main.py  pyproject.toml  requirements.dev.txt  requirements.txt  serialize.py
.github/workflows/: publish.yml  test.yml
benchmark/: benchmark.py
pinch_python/: __init__.py
pinch_python/deserialize/: deserialize.py  settings.py
pinch_python/serialize/: serialize.py  settings.py  utils.py
pysrc/pinch/: __init__.py  consts.py
pysrc/pinch/deserialize/: deserialize.py  utils.py
pysrc/pinch/serialize/: serialize.py  utils.py
pysrc/pypinch/: __init__.py  consts.py
pysrc/pypinch/deserialize/: deserialize.py  settings.py  utils.py
pysrc/pypinch/serialize/: serialize.py  settings.py  utils.py
src/: lib.rs
src/deserializing/: compound_types.rs  consistent_typed_list.rs  deserialize.rs  mod.rs  primitives.rs  string_cache.rs  utils.rs
src/pinch_python/: __init__.py
src/pinch_python/deserialize/: deserialize.py  utils.py
src/pinch_python/serialize/: serialize.py  utils.py
src/serializing/: compound_types.rs  mod.rs  number_encoding.rs  primitives.rs  py_bytes_buffer.rs  serialize.rs  serializing_string_cache.rs  utils.rs
src/utils/: consts.rs  macros.rs  mod.rs  py_helpers.rs  wrappers.rs
tests/: test__backend_detection.py  test__invalid_input.py  test__serialize_deserialize.py
