[package]
name = "pinch"
version = "0.0.10"
edition = "2021"
authors = ["Aharon Sambol <aharon.sambol@gmail.com>"]


[lib]
name = "_pypinch"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies.pyo3-ffi]
version = "0.28.0"
features = ["extension-module"]

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
rustc-hash = "2.1.1"

[build-dependencies]
pyo3-build-config = "*"