[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pypinch"
version = "0.0.2"
authors = [
    { name="Aharon Sambol", email="aharon.sambol@gmail.com" },
]
description = "Schemaless binary serialization format without limitations"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["dependencies"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Topic :: File Formats",
    "Typing :: Typed",
    "Intended Audience :: Developers",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/AharonSambol/pypinch"
Issues = "https://github.com/AharonSambol/pypinch/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
pythonpath = ["src"]