[build-system]
build-backend = "maturin"
requires = ["maturin>=1,<2"]

[tool.maturin]
python-source = "pysrc"
module-name = "pypinch._pypinch"
include = [
    { format = "sdist", path = ".cargo/*" },
    { format = "sdist", path = "Cargo.lock" },
]

[project]
name = "pypinch"
version = "0.0.5"
authors = [
    { name="Aharon Sambol", email="aharon.sambol@gmail.com" },
]
description = "Schemaless binary serialization format without limitations"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["dependencies"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Topic :: File Formats",
    "Typing :: Typed",
    "Intended Audience :: Developers",
]
license = "MIT"

[project.urls]
Homepage = "https://github.com/AharonSambol/pypinch"
Issues = "https://github.com/AharonSambol/pypinch/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
pythonpath = ["pysrc"]